Fixed centering issues on mobile; accessibility updates.

--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@ body {
   align-items: center;
   flex-direction: column;
   margin: 0;
+  text-align: center;
 }
 
 input {
